# Jarvis-Operas

./: .gitignore  CHANGELOG.md  MAINTAINER_NAMESPACE_FUNCTION_PLAYBOOK_CN.md  MAINTAINING.md  MANIFEST.in  README.md  joerl  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/: architecture.md  migration.md
examples/: test_from.py  test_stat_chi2_cov_call_modes.py
jarvis_operas/: __init__.py  api.py  bootstrap_state.py  cli.py  curve_cache.py  curve_interpolator.py  curve_manifest.py  curve_registration.py  curve_storage.py  curves.py  errors.py  integration.py  io_utils.py  loading.py  logging.py  mutation_policy.py  name_utils.py  namespace_policy.py  operas.py  persistence.py  registration.py  registry.py
jarvis_operas/adapters/: polars.py
jarvis_operas/builtins/: __init__.py  core.py  helper.py  math.py  stat.py
jarvis_operas/catalog/: __init__.py  index.py
jarvis_operas/core/: __init__.py  operas.py  registry.py  spec.py
jarvis_operas/manifests/: interpolations.manifest.json
jarvis_operas/manifests/curves/: interp1_xy_flat.json
scripts/: clean_workspace.sh  generate_function_docs.py  txt_to_curve_json.py
tests/: test_async.py  test_catalog.py  test_cli.py  test_cmb.py  test_curves.py  test_docs_contract.py  test_docs_generation.py  test_global_concurrency.py  test_import_lazy.py  test_integration.py  test_loading.py  test_loading_operas.py  test_logging.py  test_name_utils.py  test_operas_backends.py  test_persistence.py  test_public_api_contract.py  test_registry.py  test_release_gate_120.py
(+68 files in other folders)
